--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -1,23 +1,18 @@
 header 
+	width: 100%
+	background: url('../img/header.jpg')
+	background-size: cover
+	background-position: center 
+	height: 500px
+	vertical-align: center 
 
 
+    
+h1
+	font-size: 40px
+	position: absolute
+	margin-top: 100px
+	margin-left: 100px
 
-.header
-	background: green
-	padding: 20px
-	margin: 20px
-	height: 600px
-	display: flex 
-	flex-direction: row
-	flex-wrap: wrap
-	justify-content: flex-end
-	align-items: flex-end	
-
-.caja
-	background: violet
-	padding: 20px
-	margin: 20px
-	width: 100px
 	
-
-
+	
