--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -3,16 +3,38 @@ header
 	background: url('../img/header.jpg')
 	background-size: cover
 	background-position: center 
-	height: 500px
-	vertical-align: center 
+	position: relative
+	height: 700px
+	background-attachment: fixed
+	
 
 
-    
-h1
-	font-size: 40px
+
+  
+.menu
+	text-align: center
+	width: 100%
+	a
+		text-decoration: none
+		font-size: 20px
+		color: white
+		display: inline-block
+		margin: 40px 20px
+		position:relative
+	a:hover
+		text-decoration: underline
+.textos
+	text-align: center
+	width: 100%
+	color: white
 	position: absolute
-	margin-top: 100px
-	margin-left: 100px
+	margin-top: -52px
+	top: 50%
+	.nombre
+		margin-left: -100px
+		font-size: 50px
+	.nombre2
 
-	
-	
+
+
+    	
