--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -4,8 +4,14 @@ header
 	background-size: cover
 	background-position: center 
 	position: relative
-	height: 700px
+	height: 500px
 	background-attachment: fixed
+	
+	.logo
+		height: 800px
+		
+
+
 	
 
 
@@ -14,26 +20,58 @@ header
 .menu
 	text-align: center
 	width: 100%
+	font-family: 'Oswald'
+	left: 100px
+
+
 	a
 		text-decoration: none
-		font-size: 20px
+		font-size: 25px
 		color: white
 		display: inline-block
-		margin: 40px 20px
+		margin: 40px 40px
 		position:relative
+		padding: 20px
+
+
 	a:hover
 		text-decoration: underline
+
+
+
+
+
+
+	
+
+
 .textos
 	text-align: center
 	width: 100%
 	color: white
 	position: absolute
-	margin-top: -52px
+	margin-top: -60px
 	top: 50%
+
 	.nombre
-		margin-left: -100px
-		font-size: 50px
+		
+		font-size: 80px
+		font-family: sans-serif
+		font-weight: 400
+		font-style: italic
 	.nombre2
+		font-family: 'Oswald'
+		font-weight: 300
+		
+		font-size: 40px
+		font-style: italic
+	.nombre3
+		font-family: 'Oswald'
+		font-weight: 200
+		font-size: 30px
+	span
+		font-family: sans-serif
+		font-weight: 400
 
 
 
