--- a/nuevo/sass/estilos.css
+++ b/nuevo/sass/estilos.css
@@ -4,18 +4,23 @@ header {
   background-size: cover;
   background-position: center;
   position: relative;
-  height: 700px;
+  height: 500px;
   background-attachment: fixed; }
+  header .logo {
+    height: 800px; }
 
 .menu {
   text-align: center;
-  width: 100%; }
+  width: 100%;
+  font-family: "Oswald";
+  left: 100px; }
   .menu a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
     color: white;
     display: inline-block;
-    margin: 40px 20px; }
+    margin: 40px 40px;
+    padding: 20px; }
   .menu a:hover {
     text-decoration: underline; }
 
@@ -24,11 +29,25 @@ header {
   width: 100%;
   color: white;
   position: absolute;
-  margin-top: -52px;
+  margin-top: -60px;
   top: 50%; }
   .textos .nombre {
-    margin-left: -100px;
-    font-size: 50px; }
+    font-size: 80px;
+    font-family: sans-serif;
+    font-weight: 400;
+    font-style: italic; }
+  .textos .nombre2 {
+    font-family: "Oswald";
+    font-weight: 300;
+    font-size: 40px;
+    font-style: italic; }
+  .textos .nombre3 {
+    font-family: "Oswald";
+    font-weight: 200;
+    font-size: 30px; }
+  .textos span {
+    font-family: sans-serif;
+    font-weight: 400; }
 
 .main {
   background: black;
