--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -6,39 +6,43 @@ header
 	position: relative
 	height: 500px
 	background-attachment: fixed
-	
-	.logo
-		height: 800px
+
+	.caja
+		height: 100%
+		width: 50%
 		
 
+	.contenedor
+		display: flex
+		width: 100%
+		flex-direction: row
+		justify-content: space-between
+		align-items: center
+		flex-wrap: nowrap
 
-	
 
+	.logo
+		max-height: 400px
+		
 
-
-  
-.menu
-	text-align: center
-	width: 100%
-	font-family: 'Oswald'
-	left: 100px
+	.menu
+		text-align: center
+		width: 100%
+		font-family: 'Oswald'
+		
 
 
 	a
 		text-decoration: none
 		font-size: 25px
 		color: white
-		display: inline-block
-		margin: 40px 40px
-		position:relative
-		padding: 20px
+		
+
+		
 
 
 	a:hover
 		text-decoration: underline
-
-
-
 
 
 
@@ -49,9 +53,7 @@ header
 	text-align: center
 	width: 100%
 	color: white
-	position: absolute
-	margin-top: -60px
-	top: 50%
+	
 
 	.nombre
 		
