--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -3,32 +3,43 @@ header
 	background: url('../img/header.jpg')
 	background-size: cover
 	background-position: center 
-	position: relative
-	height: 500px
+	
+	height: 450px
 	background-attachment: fixed
 
 	.caja
-		height: 100%
-		width: 50%
+		width: 30%
+
+
 		
 
 	.contenedor
 		display: flex
-		width: 100%
+		justify-content: space-between	
+		width: 	100%
 		flex-direction: row
-		justify-content: space-between
-		align-items: center
-		flex-wrap: nowrap
+		align-items: center			
+			
+
+		
+		
+		
+		
 
 
 	.logo
-		max-height: 400px
+		width: 100%
+		
+			
+		
 		
 
 	.menu
 		text-align: center
 		width: 100%
 		font-family: 'Oswald'
+		font-weight: 300
+
 		
 
 
@@ -36,6 +47,7 @@ header
 		text-decoration: none
 		font-size: 25px
 		color: white
+		margin: 20px
 		
 
 		
@@ -50,30 +62,51 @@ header
 
 
 .textos
-	text-align: center
-	width: 100%
 	color: white
+	width: 70%
+	position: relative
+	
+
+
+
+
+		
+
+	
+
 	
 
 	.nombre
 		
-		font-size: 80px
-		font-family: sans-serif
+		font-size: 60px
+		font-family: 'Oswald'
 		font-weight: 400
 		font-style: italic
+		padding: 0
+		
+
 	.nombre2
+			
 		font-family: 'Oswald'
 		font-weight: 300
-		
+		margin-left: 40px
 		font-size: 40px
 		font-style: italic
+		padding: 0
+		
 	.nombre3
+		
 		font-family: 'Oswald'
 		font-weight: 200
 		font-size: 30px
+		margin-left: 80px
+		padding: 10px
+		
 	span
+		
 		font-family: sans-serif
-		font-weight: 400
+		font-size: 55px
+		
 
 
 
