--- a/nuevo/sass/_header.sass
+++ b/nuevo/sass/_header.sass
@@ -3,42 +3,50 @@ header
 	background: url('../img/header.jpg')
 	background-size: cover
 	background-position: center 
-	
 	height: 450px
-	background-attachment: fixed
+	background-attachment: 	fixed
+	box-shadow: 5px 5px	10px	
+
+
+	
 
 	.caja
 		width: 30%
+		
+					
+		
 
 
 		
 
+		
 	.contenedor
 		display: flex
 		justify-content: space-between	
 		width: 	100%
 		flex-direction: row
-		align-items: center			
+		align-items: center
+		overflow: hidden	
+
+
 			
-
 		
-		
-		
-		
-
+			
 
 	.logo
-		width: 100%
+		width: 90%
+	
+		
+
 		
 			
-		
-		
 
 	.menu
 		text-align: center
 		width: 100%
 		font-family: 'Oswald'
 		font-weight: 300
+
 
 		
 
@@ -58,23 +66,11 @@ header
 
 
 
-	
-
-
-.textos
-	color: white
-	width: 70%
-	position: relative
-	
-
-
-
-
+	.textos
+		color: white
+		width: 70%
+		position: relative	
 		
-
-	
-
-	
 
 	.nombre
 		
